multi home and fqdn updates for ds

--- a/templates/default/hosts.cfg.erb
+++ b/templates/default/hosts.cfg.erb
@@ -4,8 +4,8 @@
 <% @nodes.each do |n| -%>
 define host {
   use server
-  address <%= n['ipaddress'] %>
-  host_name <%= n['hostname'] %>
+  address <%= (n[:cloud] || {})[:local_ipv4] || n[:ipaddress] %>
+  host_name <%= n[:fqdn] %>
 <% if n.run_list.roles.nil? -%>
   hostgroups all
 <% else -%>
