--- a/templates/default/hosts.cfg.erb
+++ b/templates/default/hosts.cfg.erb
@@ -6,10 +6,10 @@ define host {
   use server
   address <%= (n[:cloud] || {})[:local_ipv4] || n[:ipaddress] %>
   host_name <%= n[:fqdn] %>
-<% if n.run_list.roles.nil? || n.run_list.roles.length == 0 -%>
+<% if (n.roles || []).empty? -%>
   hostgroups all
 <% else -%>
-  hostgroups <%= n.run_list.roles.to_a.join(",") %>
+  hostgroups <%= n.roles.to_a.join(",") %>
 <% end -%>
 }
 
