--- a/templates/default/nrpe.cfg.erb
+++ b/templates/default/nrpe.cfg.erb
@@ -29,18 +29,21 @@ command[check_mysql_server]=<%= node['nagios']['plugin_dir'] %>/check_mysql -H l
 #command[check_memcached_size]=/usr/local/bin/check_memcached -H <%= @ip %> --size-warning 60 --size-critical 80
 #command[check_memcached_hit]=/usr/local/bin/check_memcached -H <%= @ip %> --hit-warning 40 --hit-critical 20
 
+# Supervisor
 <% if node.recipe?('supervisor') %>
 command[check_supervisorctl]=<%= node['nagios']['plugin_dir'] %>/check_supervisorctl.sh
 <% else %>
 command[check_supervisorctl]=<%= node['nagios']['plugin_dir'] %>/check_dummy 0 "supervisor not installed"
 <% end %>
 
+# Syslog NG
 <% if node.recipe?('syslog-ng') %>
 command[check_syslog-ng]=<%= node['nagios']['plugin_dir'] %>/check_procs -c 1:1 -C syslog-ng
 <% else %>
 command[check_syslog-ng]=<%= node['nagios']['plugin_dir']%>/check_dummy 0 "syslog-ng not installed"
 <% end %>
 
+# Ganglia
 <% if node.recipe?('ganglia') %>
 command[check_gmond]=<%= node['nagios']['plugin_dir'] %>/check_procs -c 1:1 -C gmond
 <% else %>
