--- a/templates/default/nagios.cfg.erb
+++ b/templates/default/nagios.cfg.erb
@@ -88,7 +88,7 @@ accept_passive_service_checks=1
 execute_host_checks=1
 accept_passive_host_checks=1
 
-enable_notifications=<%= node['nagios']['notifications_enabled'] %>
+enable_notifications=<%= node['nagios']['notifications_enabled'] ? '1' : '0' %>
 enable_event_handlers=1
 
 #process_performance_data=1
