--- a/templates/default/nrpe.cfg.erb
+++ b/templates/default/nrpe.cfg.erb
@@ -29,6 +29,9 @@ command[check_mysql_server]=<%= node['nagios']['plugin_dir'] %>/check_mysql -H l
 #command[check_memcached_size]=/usr/local/bin/check_memcached -H <%= @ip %> --size-warning 60 --size-critical 80
 #command[check_memcached_hit]=/usr/local/bin/check_memcached -H <%= @ip %> --hit-warning 40 --hit-critical 20
 
+# Open file desciptors
+command[check_open_fds]=<%= node['nagios']['plugin_dir'] %>/check_open_fds.sh
+
 # Supervisor
 <% if node.recipe?('supervisor') %>
 command[check_supervisorctl]=<%= node['nagios']['plugin_dir'] %>/check_supervisorctl.sh
