--- a/templates/default/templates.cfg.erb
+++ b/templates/default/templates.cfg.erb
@@ -4,10 +4,8 @@ define contact {
   host_notification_period        24x7
   service_notification_options    w,u,c,r,f,s
   host_notification_options       d,u,r,f,s
-#  service_notification_commands   service-notify-by-email, service-notify-by-jabber
-  service_notification_commands   service-notify-by-email
-#  host_notification_commands      host-notify-by-email, host-notify-by-sms-gateway, host-notify-by-jabber
-  host_notification_commands      host-notify-by-email
+  service_notification_commands   service-notify-by-email,service-notify-by-sms-email
+  host_notification_commands      host-notify-by-email,host-notify-by-sms-email
   register                        0
 }
 
