--- a/templates/default/hosts.cfg.erb
+++ b/templates/default/hosts.cfg.erb
@@ -4,7 +4,7 @@
 <% @nodes.each do |n| -%>
 define host {
   use server
-  address <%= (n[:cloud] || {})[:local_ipv4] || n[:ipaddress] %>
+  address <%= n['nagios']['client']['ipaddress'] %>
   host_name <%= n[:fqdn] %>
 <% if (n.roles || []).empty? -%>
   hostgroups all
