wait 5 min before sending out first notification (nagios)

--- a/templates/default/templates.cfg.erb
+++ b/templates/default/templates.cfg.erb
@@ -43,6 +43,7 @@ define host {
   max_check_attempts      <%= nagios_attr(:default_host)[:max_check_attempts] %>
   check_command           check-host-alive
   notification_interval   <%= nagios_interval(nagios_attr(:default_host)[:notification_interval]) %>
+  first_notification_delay <%= nagios_interval(nagios_attr(:default_host)[:first_notification_delay]) %>
   notification_options    d,u,r
   contact_groups          <%= nagios_attr(:default_contact_groups).join(",") %>
   register                0
@@ -71,6 +72,7 @@ define service {
   contact_groups                  <%= nagios_attr(:default_contact_groups).join(",") %>
   notification_options            w,u,c,r
   notification_interval           <%= nagios_interval(nagios_attr(:default_service)[:notification_interval]) %>
+  first_notification_delay        <%= nagios_interval(nagios_attr(:default_service)[:first_notification_delay]) %>
   notification_period             24x7
   register                        0
 }
