nagios tweaks for mysql monitoring

--- a/templates/default/nrpe.cfg.erb
+++ b/templates/default/nrpe.cfg.erb
@@ -20,7 +20,7 @@ command[check_smtp]=<%= node['nagios']['plugin_dir'] %>/check_smtp -H <%= node['
 command[check_nginx]=<%= node['nagios']['plugin_dir'] %>/check_procs -w 2:3 -c 1:5 -C nginx
 command[check_sphinx]=<%= node['nagios']['plugin_dir'] %>/check_procs -c 1:1 -C searchd
 <% unless node[:mysql].nil? -%>
-command[check_mysql_server]=<%= node['nagios']['plugin_dir'] %>/check_mysql -H localhost -u debian-sys-maint -p <%= node['mysql']['server_debian_password'] %>
+command[check_mysql_server]=<%= node['nagios']['plugin_dir'] %>/check_mysql -H localhost -u monitoring -p <%= node['mysql']['server_monitoring_password'] %>
 <% end -%>
 #command[check_unicorn]=<%= node['nagios']['plugin_dir'] %>/check_procs -c 4:8 -C unicorn_rails
 #
