--- a/templates/default/commands.cfg.erb
+++ b/templates/default/commands.cfg.erb
@@ -158,8 +158,13 @@ define command {
 }
 
 define command {
-  command_name    check_https_host_url_expect
+  command_name    check_https_host_url_content
   command_line    $USER1$/check_http -S -H $ARG1$ -u $ARG2$ -s $ARG3$
+}
+
+define command {
+  command_name    check_https_host_port_url_content
+  command_line    $USER1$/check_http -S -H $ARG1$ -p $ARG2$ -u $ARG3$ -s $ARG4$
 }
 
 define command {
